[package]
name = "tokio-serial"
version = "5.5.0"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for tokio"
license = "MIT"
homepage = "https://github.com/berkowski/tokio-serial"
repository = "https://github.com/berkowski/tokio-serial"
documentation = "http://docs.rs/tokio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[package.metadata]
msrv = "1.46.0"

[features]
default = []
libudev = ["mio-serial/libudev"]

[dependencies]
futures = "0.3"
tokio = { version = "1.8", features = ["net", "rt"] }
mio-serial = "5.0.2"

[dev-dependencies]
bytes = "1"
log = "0.4"
env_logger = "0.9.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util"] }

[[example]]
name = "serial_println"
path = "examples/serial_println.rs"
